# SLAE-solution-methods

./: CMakeLists.txt  README.md  matrix.h  progonka.cpp  test.cpp
src/: CSR.h  CSR_new.h  Dense_matrix.h  Gauss_Zeidel.h  Iteration_methods.h  LUD_decomposition.h  Matrix.h  Simmetr_Gauss_Zeidel.h  Speedest_Gradient_Descent.h  Yakobi.h  Zeidel.cpp  methods_for_vectors.h  simple_iteration_method.h  simple_iteration_method_chebyshov.h
src/KR2/: 1_task.cpp  1_task.py  2_task.py  data_Simmetr_Gauss_Zeidel.txt  data_chebysh.txt  data_t_opt.txt  data_tau.txt
tests/: CMakeLists.txt  CSR_Test.cpp  Iteration_methods_Test.cpp  Speedest_Grad_Descent._Test.cpp  Tests.cpp  ThreeDiad_Test.cpp
